Add delete clients endpoint
- changes to the db to use DATABASE_URL
