# db/schema.rb
@@ -10,28 +10,25 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2020_05_14_192253) do
+ActiveRecord::Schema.define(version: 2020_05_19_113852) do
+
   # These are extensions that must be enabled in order to support this database
-  enable_extension 'pgcrypto'
-  enable_extension 'plpgsql'
-  enable_extension 'uuid-ossp'
+  enable_extension "pgcrypto"
+  enable_extension "plpgsql"
+  enable_extension "uuid-ossp"
 
-  create_table 'client_scopes',
-               id: :uuid,
-               default: -> { 'gen_random_uuid()' },
-               force: :cascade do |t|
-    t.uuid 'client_id'
-    t.string 'scope'
+  create_table "client_scopes", id: :uuid, default: -> { "gen_random_uuid()" }, force: :cascade do |t|
+    t.uuid "client_id"
+    t.string "scope"
+    t.datetime "deleted_at"
   end
 
-  create_table 'clients',
-               id: :uuid,
-               default: -> { 'gen_random_uuid()' },
-               force: :cascade do |t|
-    t.string 'name'
-    t.string 'secret'
-    t.jsonb 'supplemental', default: {}, null: false
+  create_table "clients", id: :uuid, default: -> { "gen_random_uuid()" }, force: :cascade do |t|
+    t.string "name"
+    t.string "secret"
+    t.jsonb "supplemental", default: {}, null: false
+    t.datetime "deleted_at"
   end
 
-  add_foreign_key 'client_scopes', 'clients'
+  add_foreign_key "client_scopes", "clients"
 end
